<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="prf_study_participant_number">prf_study_participant_number</string>
    <string name="prf_study_recipient_email">prf_study_recipient_email</string>
    <string name="app_name">Provider Resilience</string>

    <!-- MENU STRINGS -->
    <string name="main_dashboard">Dashboard</string>
    <string name="main_tools">Dashboard</string>
    <string name="main_cards">Dashboard</string>
    <string name="main_about">Dashboard</string>
    <string name="main_settings">Dashboard</string>
    <string name="emptylist">ERROR</string>
    <string name="about_content">
<![CDATA[
        <font color=\'#ffffff\'>
    	<P>This app has been designed for healthcare professionals who treat service members, veterans and their families.
        Its purpose is to provide you with a set of tools that support resilience and fight burnout and compassion fatigue.
        
        <P>Healthcare professionals know that they need to take care of themselves and they\'ve told us that they tend to know what
        to do to fight stress - they just don\'t take the time to do it. That\'s where this app comes in.
        
        <P>We\'ve developed the tools providers have asked for: to help you keep track of how you\'re doing, reminders to do the
        things you already know you should be doing, and some interesting things to do that support resilience.
        We even remind you on a daily basis to use the app. It only takes a few minutes a day to take care of yourself.
         
        <P>* Please feel free to send your feedback on this application to the team at the National Center for Telehealth & Technology (T2) - 
        <u>usarmy.ncr.medcom-usamrmc-dcoe.mbx.t2-central@mail.mil</u>
    ]]>
    </string>

    <!-- EULA STRINGS -->
    <string name="eula_activity_title">Eula</string>
    <string name="eula_title">License</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
    <string name="eula_content">
<![CDATA[
        <font color="#ffffff">
		<p>National Center for Telehealth and Technology ("T2")</p>
		<p>Software End User License Agreement</p>
		
		<p>By agreeing to have any of T2 software products installed on to your device and by subsequent use of the Software, you agree to comply with the terms of this general End User Licence Agreement ("EULA") where no specific agreement is in place between T2 and the user of the software. If you do not agree to the terms of this EULA, do not install or use the Software but uninstall it from your device. This EULA applies to any upgrades and supplements to the original Software provided and is referred to on your opening screen.</p>
		<hr />
		
		<ol>
			<li>
				<p>The Licensed Software is owned by The National Center for Telehealth and Technology ("T2") a division of the US Defense Centers of Excellence ("DCOE") and the United States Department of Defense ("DOD"). The Software is licensed, not sold, only on the terms of this EULA. Acceptance and installation of the software indicates your acceptance of the terms and conditions of this EULA.</p>
				<p>Upon installation of the software, you will acquire the right to use the Software, directly from T2.  You assume responsibility for the selection of the program to achieve your intended results, and for the installation, use and results obtained from the Licensed Software.</p>
			</li>
			
			<li>In consideration of your acceptance of the terms and conditions contained in this EULA, T2 grants you a non-exclusive license to use the Licensed Software and the associated documentation for your own needs on one device. You are not licensed to rent, lease, transfer or distribute the Software.</li>
			
			<li>Title to the Software, including media and documentation, remain with T2. You may not copy, reproduce or make data transmissions, in whole or in part, except as is necessary for back-up or archival purposes. You may not reverse engineer, translate, disassemble, decompile the Software or create similar software in whole or in part.</li>
			
			<li>The license is effective upon acceptance and installation of the Licensed Software and shall continue until terminated. You may terminate it at any time by uninstalling the Licensed Software. T2 has the right to terminate this Agreement if you fail to comply with any term or condition of this EULA. Upon termination you shall stop all use of the Software and uninstall the Licensed Software.</li>
			
			<li>Confidentiality of the Software will survive any termination of this EULA, to include the application, design, and functionality.</li>
			
			<li>This Software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.</li>
			
			<li>In no event will T2 be liable for any loss of data, loss of use, or indirect, special, incidental or consequential damages in any way related to or arising out of the use of the Software. T2\s maximum liability shall in no event exceed the amounts paid to T2 for the Licensed Software.</li>
			
			<li>The prevailing party in any action or proceeding between T2 and End-User Licensee arising out of or related to this Agreement shall be entitled to recover reasonable legal fees and costs, including lawyers\ fees, which may be incurred.</li>
			
			<li>This Agreement shall be construed and enforced in accordance with the laws of the District of Columbia, United States of America and each party agrees to be subject to those relevant laws.</li>
			
			<li>You also acknowledge that it is your responsibility to protect and otherwise secure any information captured and stored by the software once installed on your device.</li>
			
			<li>Information captured and stored by the software program may be considered sensitive information. It is the end user\s responsibility to protect or otherwise secure the content captured and stored by the software once installed on the end user\s device.</li>
		</ol>
		
		<p>It is understood and acknowledged that T2 has the absolute right to obtain injunctive relief to protect T2\s proprietary rights.</p>
		
		<p>By using the Software, you further agree that this is the complete and exclusive statement of the Agreement which supersedes any proposal or prior agreement, oral or written, and any other communications relating to the subject matter of this EULA.</p>
		
		<p>If any provision of this Agreement is held to be invalid or unenforceable the remaining provisions will not be affected.</p>
		
		<p>For statistical purposes T2 collects anonymous usage data and sends it to a data provider. By accepting this agreement, it is understood that this feature can be disabled through settings screen at any time.</p>
		
		<p>Disclaimer: The information in the application is not intended as a substitute for any type of professional medical services or training and should not be used for such purposes. The information is provided as is and the author does not warrant the accuracy of the information. This information is not meant to diagnose or develop permanent treatment plans for health emergencies, health problems or diseases. If you are in an emergency or life-threatening medical situation, seek medical assistance immediately. Dial emergency number (911 in the USA) for emergency medical services.</p>
		
		<p>External Links: The appearance of external hyperlinks does not constitute endorsement by the United States Department of Defense of the linked websites, or the information, products or services contained therein. The United States Department of Defense does not exercise any editorial control over the information you may find at these locations. All links are provided consistent with the stated purpose of these DoD websites.</p> 	
	]]>
    </string>

</resources>